--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 }
 .content {
     display: grid;
-    grid-template-columns: 550px 1fr;
+    grid-template-columns: 1fr 1.3fr;
 
 
 }
@@ -27,12 +27,20 @@ header {
     gap: 16px;
 }
 
+.content-header__logo{
+    height: 48px;
+    width: 48px;
+
+}
+.content-header__logo__img {
+    height: 48px;
+    width: 48px;
+}
 .content-header__title {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
     font-size: 32px;
-    line-height: 100%;
     color: #355B3E;
 }
 
@@ -55,11 +63,6 @@ header {
 .main__login-form {
     display: flex;
     flex-direction: column;
-}
-
-.main__login-form {
-    display: flex;
-    flex-direction: column;
     gap: 24px;
     margin-bottom: 24px;
 }
@@ -68,7 +71,6 @@ header {
 .password {
     font-weight: 600;
     font-size: 16px;
-    line-height: 100%;
 }
 
 .email-container,
@@ -77,9 +79,10 @@ header {
     flex-direction: column;
     gap: 8px;
 }
+
 .email-container > input,
 .password-container > input {
-    width: 520px;
+    width: 35vw;
     height: 56px;
     border-radius: 4px;
     border: solid 1px #B8D6BF;
@@ -92,7 +95,6 @@ header {
 
 .password-help {
     color: #355B3E;
-
 }
 
 .login-form__btn {
@@ -102,7 +104,7 @@ header {
 
 .button__login,
 .button__sign {
-    width: 199px;
+    width: 15vw;
     height: 48px;
     border: solid 1px #029664;
     border-radius: 8px;
@@ -120,21 +122,24 @@ header {
 .button__sign {
     color: #029664;
     background-color: white;
-}
+}*/
 
 .content__right-side {
     background-color: #F5DBC4;
+    color: rgb(128, 0, 0);
+    font-size: 60px;
+    
+}
+.right-side-bg {
+    background-color: #F5DBC4;
+    width: 100%;
     height: 100%;
-    width: 100%
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.bg-image {
-    object-fit: contain;
+.right-side-img {
+    display: block;
+    margin: auto;
     height: 100vh;
-    
 }
 
 .footer__info {
@@ -148,3 +153,8 @@ header {
     color: #355B3E;
     font-weight: 600;
 }
+
+.checkmark-container input:checked ~ .checkmark {
+    background-color: #355B3E;
+}
+
